--- a/backup/1.backup.md
+++ b/backup/1.backup.md
@@ -48,7 +48,7 @@ Backup only the grades collection from the sample_training database:
 ![title](./resources/backupCollection.png)
 
 ### <span style="color:darkgoldenrod"> Как работи mongorestore?
-mongorestore налива данни от dump направем с mongodump, в cluster
+mongorestore налива данни от dump направен с mongodump, в cluster
 
 source и target clusters трябва да са от compatible версии, ако искаме да предотвратим data loss
 
